--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx2G
 	loader_version=0.11.3
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.16.2+
 	maven_group = me.pm.lemon
-	archives_base_name = lemon
+	archives_base_name = project-lemon
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
